# dlt-saga

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  cliff.toml  codecov.yml  mise.toml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/create-release-notes/: SKILL.md
.claude/skills/publish-release-notes/: SKILL.md
.dlt/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  plugin.yml
.github/workflows/: ci.yml  codecov.yml  publish.yml  sync-wiki.yml
dlt_saga/: __init__.py  ai_setup_command.py  cli.py  defaults.py  destroy.py  init_command.py  lint.py  maintenance.py  new_adapter_command.py  new_config_command.py  packages.py  project_config.py  session.py  validate.py
dlt_saga/destinations/: __init__.py  base.py  config.py  factory.py
dlt_saga/destinations/bigquery/: __init__.py  access.py  base.py  config.py  destination.py
dlt_saga/destinations/databricks/: access.py  config.py  destination.py
dlt_saga/destinations/duckdb/: __init__.py  config.py  destination.py
dlt_saga/historize/: __init__.py  config.py  factory.py  runner.py  sql.py  state.py
dlt_saga/hooks/: __init__.py  loader.py  registry.py
dlt_saga/pipeline_config/: __init__.py  base_config.py  compat.py  file_config.py  naming.py
dlt_saga/pipelines/: __init__.py  base_client.py  base_config.py  base_pipeline.py  date_window.py  executor.py  registry.py  watermark.py
dlt_saga/pipelines/api/: __init__.py  base.py  config.py  pipeline.py
dlt_saga/pipelines/database/: __init__.py  client.py  config.py  pipeline.py
dlt_saga/pipelines/filesystem/: __init__.py  client.py  config.py  pipeline.py
dlt_saga/pipelines/google_sheets/: __init__.py  client.py  config.py  pipeline.py
dlt_saga/pipelines/native_load/: __init__.py  _sql.py  config.py  pipeline.py  state.py
dlt_saga/report/: __init__.py  collector.py  generator.py  report.css  report.js  uploader.py
dlt_saga/schemas/: dlt_common.json
dlt_saga/templates/: ai_context.md
dlt_saga/testing/: __init__.py  fixtures.py
dlt_saga/utility/: __init__.py  collisions.py  column_docs.py  env.py  filters.py  generate_schemas.py  internal_tables.py  link_schemas.py  naming.py  optional_deps.py  project_root.py  sql.py  tabular.py  templating.py  yaml_io.py
docs/: getting-started.md
docs/images/: architecture.mmd  cli-commands.mmd  write-disposition.mmd
docs/reference/: CLI.md  CONFIGURATION.md  DEPLOYMENT.md  PROFILES.md
example/: .gitignore  profiles.yml  pyproject.toml  saga_project.yml
example/configs/filesystem/: sample.yml
scripts/: release.py  safe_upgrade.py  tag.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_description_reconcile.py  test_destroy.py  test_golden_path.py  test_historize.py  test_historize_description_reconcile.py  test_historize_merge_key.py  test_log_compaction_duckdb.py  test_native_load_state_duckdb.py  test_partial_refresh.py  test_run_combined.py  test_target_collisions.py
tests/unit/: __init__.py  test_ai_setup_command.py  test_api_pagination.py  test_auth_gcp.py  test_azure_keyvault.py  test_base_pipeline_finalize.py  test_base_pipeline_inject_ingested_at.py  test_base_pipeline_loaded_tables.py  test_base_pipeline_started_at.py  test_bigquery_access_formatting.py  test_bigquery_config.py  test_bigquery_dataset_access_lockout.py  test_bigquery_dialect.py  test_bigquery_ensure_schema.py  test_bigquery_staging_filter.py  test_bigquery_storage_uri.py  test_cli_confirm_flags.py  test_cli_historize_force.py  test_cli_logging.py  test_cli_verbose_version_flags.py  test_clustering_reconcile.py  test_collisions.py  test_column_docs.py  test_common.py  test_config_compat.py  test_config_validation.py  test_database_client_misc.py  test_database_query_build.py  test_database_source_description.py  test_databricks.py  test_date_window_api.py  test_defaults.py  test_destinations_base.py  test_destroy.py  test_doctor.py  test_duckdb_destination.py  test_env.py  test_execution_plan.py  test_file_config.py  test_filesystem_client_credentials.py  (+68 more)
wiki/: Architecture.md  CLI-Reference.md  Configuration.md  Custom-Naming.md  Deployment.md  Getting-Started.md  Historize.md  Home.md  Native-Load.md  Orchestration-Recipes.md  Performance.md  Pipeline-Types.md  Plugin-Development.md  Profiles.md  _Sidebar.md
(+39 files in other folders)
